kubernetes/system/tapy/overlays/homelab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tapy
  labels:
    app.kubernetes.io/part-of: tapy
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
