kubernetes/system/tapy/overlays/homelab/workload-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tapy-backend
spec:
  template:
    spec:
      priorityClassName: homelab-tapy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tapy-frontend
spec:
  template:
    spec:
      priorityClassName: homelab-tapy
